[gd_scene load_steps=3 format=3 uid="uid://bvrmks8outcaw"]

[ext_resource type="Texture2D" uid="uid://bhqylbt87pmer" path="res://resources/themes/Joyous.png" id="1_1htsk"]
[ext_resource type="Script" uid="uid://6pkaym4aalcg" path="res://ui/game_menu/chicken_inventory/inventory_item.gd" id="1_ufued"]

[node name="InventoryItem" type="PanelContainer"]
offset_right = 47.0
offset_bottom = 108.0
script = ExtResource("1_ufued")

[node name="InventoryItemContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="InventoryItemContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_1htsk")
expand_mode = 5

[node name="NameLabel" type="Label" parent="InventoryItemContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ShopItemLabel"
text = "NAME"

[node name="TypeLabel" type="Label" parent="InventoryItemContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TYPE"

[node name="DescriptionLabel" type="Label" parent="InventoryItemContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DESCRIPTION"
